WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67480
[Chromium] [REGRESSION] Layout Test svg/batik/text/textStyles.svg is failing
https://bugs.webkit.org/show_bug.cgi?id=67480
Summary
[Chromium] [REGRESSION] Layout Test svg/batik/text/textStyles.svg is failing
Alexander Pavlov (apavlov)
Reported
2011-09-02 05:40:01 PDT
The following layout test is failing on Chromium ToT bots: svg/batik/text/textStyles.svg (BTW, the submitted patch failed this same test on the "cr-linux" EWS bot) Probable cause:
http://trac.webkit.org/changeset/94406/
(this is the revision at which the test started to consistently fail.) You can see the history for this test at
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=svg%2Fbatik%2Ftext%2FtextStyles.svg
(click "Show Results" below the table to see the actual and expected results.) I'm marking this test as failing on Chromium.
Attachments
speculative fix
(3.31 KB, patch)
2011-09-02 06:04 PDT
,
Antti Koivisto
dglazkov
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2011-09-02 06:04:04 PDT
Created
attachment 106120
[details]
speculative fix Don't know why I can't repro this on mac but the problem seems clear enough. Lets see if this helps.
Antti Koivisto
Comment 2
2011-09-06 04:14:46 PDT
http://trac.webkit.org/changeset/94561
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug