https://bugs.webkit.org/show_bug.cgi?id=67480 [Chromium] [REGRESSION] Layout Test svg/batik/text/textStyles.svg is failing

Reviewed by Dimitri Glazkov.

The text node needs willRecalcStyle mechanism too.

* dom/Text.cpp:
(WebCore::Text::recalcTextStyle):
* dom/Text.h:
(WebCore::Text::willRecalcTextStyle):
* svg/SVGTRefElement.cpp:
(WebCore::SVGTRefElement::SVGTRefElement):
(WebCore::SVGShadowText::SVGShadowText):
(WebCore::SVGShadowText::willRecalcTextStyle):



Canonical link: https://commits.webkit.org/83466@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94561 268f45cc-cd09-0410-ab3c-d52691b4dbfc